<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps</string>
    <string name="proj_spotify_streamer">Spotify Streamer</string>
    <string name="proj_build_it_bigger">Build It Bigger</string>
    <string name="proj_capstone">Capstone</string>
    <string name="proj_super_duo">Super Duo</string>
    <string name="proj_xyz_reader">XYZ Reader</string>
</resources>
