<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#f27a14a3"
    android:backgroundTint="#ffeec2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_spotify_streamer"
        android:id="@+id/btn_proj_spotify_streamer"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#7597ff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_build_it_bigger"
        android:id="@+id/btn_proj_build_it_bigger"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_proj_spotify_streamer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:background="#7597ff"
        android:layout_marginBottom="0dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_super_duo"
        android:id="@+id/btn_proj_super_duo"
        android:background="#7597ff"
        android:layout_below="@+id/btn_proj_build_it_bigger"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_xyz_reader"
        android:id="@+id/btn_proj_xyz_reader"
        android:background="#7597ff"
        android:layout_below="@+id/btn_proj_super_duo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_capstone"
        android:id="@+id/btn_proj_capstone"
        android:background="#7597ff"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_proj_xyz_reader"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
